nullaway_error_2B00F2A8-FA8C-4D65-A416-559C15349961.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/resource/ResourceWebHandler.java:500: error: [NullAway] dereferenced expression this.transformerChain is @Nullable
				.flatMap(resource -> this.transformerChain.transform(exchange, resource));
				                                          ^
    (see http://t.uber.com/nullaway )
